--- a/styles/style.css
+++ b/styles/style.css
@@ -83,3 +83,23 @@ img {
 .card-right .btn {
   color: hsl(179, 100%, 13%);
 }
+
+/* media query for mobile responsive */
+
+@media screen and (max-width: 600px) {
+  /* body {
+    width: 100vw;
+    height: 100vh;
+  } */
+  .main-card {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+  }
+  .card-left {
+    border-radius: 12px 12px 0px 0px;
+  }
+  .card-right {
+    border-radius: 0px 0px 12px 12px;
+  }
+}
